syntax ="proto3";
package pb_auth;
option go_package = "./szkproto;szkproto";

message CommonResp {
  int32 code = 1;
  string msg = 2;
}

message UserRegisterReq {
  string szk_id = 1; // 账户ID
  string nickname = 2; // 昵称
  string avatar_url = 3; // 头像
  string mobile = 4; // 手机号
  int32  platform_id = 5; // 平台
  string  udid = 6; // 设备唯一编号
  string verification_code = 7; // 验证码
  string password = 8; // 密码
}

message UserInfo {
  string user_id = 1; // 用户ID
  string szk_id = 2; // 账户ID
  string nickname = 3; // 昵称
  int32 gender = 4; // 性别
  //google.protobuf.Timestamp birth = 6; // 生日
  int64 birth_ts = 5; // 生日
  string email = 6; // Email
  string mobile = 7; // 手机号
  string avatar_url = 8; // 头像
  int64 city_id = 9; // 城市ID
  string country = 10; // 国家
  string city = 11; // 城市
}

message UserRegisterResp {
  CommonResp common = 1;
  UserInfo user_info = 2;
}

service Auth {
  rpc UserRegister(UserRegisterReq) returns(UserRegisterResp);
}
